--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 remote_theme: pages-themes/architect@v0.2.0
-title: 大呂行登の職務経歴書
-description: 大呂行登の職務経歴書
+title: luxun1910の職務経歴書
+description: luxun1910の職務経歴書
